# FireDBG.for.Rust

./: .gitignore  BUILDING.md  CHANGELOG.md  Cargo.toml  INSTALL.md  README.md  Troubleshooting.md  install.sh
.github/ISSUE_TEMPLATE/: config.yml
codelldb/: LICENSE  README.md
codelldb/adapter/crates/lldb/: Cargo.toml  build.rs
codelldb/adapter/crates/lldb/include/lldb/Utility/: SharingPtr.h
codelldb/adapter/crates/lldb/src/: lib.rs  strings.rs
codelldb/adapter/crates/lldb/src/sb/: sbbreakpoint.rs  sbcompileunit.rs  sbdata.rs  sbdebugger.rs  sbevent.rs  sbframe.rs  sbfunction.rs  sbinstructionlist.rs  sblaunchinfo.rs  sbmodule.rs  sbplatform.rs  sbprocess.rs  sbstringlist.rs  sbsymbol.rs  sbtarget.rs  sbthread.rs  sbtype.rs  sbtypeenummember.rs  sbtypemember.rs  sbvalue.rs
command/: Cargo.toml  README.md
command/src/: cfg.rs  console.rs  lib.rs  main.rs
debugger/: BUILD.md  Cargo.toml  README.md  build.rs
debugger/examples/: testdata.rs
debugger/ref/: README.md  dyn_ref.js  fn_disassemble_aarch64.s  fn_disassemble_amd64.s  hashmap.r  mutex.r  object.js  ref.js
debugger/src/: bytes.rs  debugger.rs  event.rs  lib.rs  main.rs  reader.rs  rvalue.rs  typename.rs  version.rs
debugger/src/debugger/: basic_type.rs  config.rs  disassemble.rs  probe.rs  return_value.rs  timer.rs  util.rs  value_writer.rs
debugger/src/value/: base.rs  mod.rs  value_type.rs  writer.rs
debugger/testcases/: .gitignore  call_chain.rs  call_chain_recursive.rs  deref.rs  dyn_box.rs  factorial.rs  fn_call.rs  fn_call_panic.rs  fn_name.rs  fn_prologue.rs  fn_return.rs  for_range.rs  gen_assoc_type.rs  gen_bound.rs  gen_fn.rs  gen_impl.rs  gen_multi_bound.rs  gen_new_type.rs  gen_phantom.rs  gen_trait.rs  gen_where.rs  hash_map.rs  iter_repeat.rs  loop.rs  more_option.rs  more_option_2.rs  more_result_err.rs  more_result_ok.rs  mutex.rs  object.rs  os_string.rs  pointer.rs  prim.rs  quicksort.rs  quicksort_perf.rs  reference.rs  result.rs  return_array.rs  return_char.rs  return_enum.rs  (+18 more)
debugger/tests/: async-1.rs  call_chain.rs  call_chain_recursive.rs  deref.rs  dyn_box.rs  factorial.rs  for_range.rs  function.rs  function_name.rs  function_panic.rs  function_prologue.rs  function_return.rs  gen_assoc_type.rs  gen_bound.rs  gen_fn.rs  gen_impl.rs  gen_multi_bound.rs  gen_new_type.rs  gen_phantom.rs  gen_trait.rs  gen_where.rs  hash_map.rs  iter_repeat.rs  loop.rs  more_option.rs  more_option_2.rs  more_result.rs  more_result_err.rs  more_result_ok.rs  mutex.rs  object.rs  os_string.rs  pointer.rs  primitive.rs  quicksort.rs  quicksort_perf.rs  reference.rs  result_value.rs  return_array.rs  return_char.rs  (+19 more)
indexer/: Cargo.toml  LICENSE  README.md
indexer/src/: database.rs  lib.rs  main.rs  processor.rs  translate.rs  util.rs  validator.rs
indexer/src/entity/: README.md  allocation.rs  breakpoint.rs  debugger_info.rs  event.rs  file.rs  function.rs  mod.rs  type_info.rs
parser/: Cargo.toml  README.md  rustfmt.toml
parser/src/: lib.rs  serde.rs
parser/src/def/: body.rs  function.rs  mod.rs  source.rs  workspace.rs
parser/src/def/workspace/: raw.rs
parser/src/parsing/: body.rs  function.rs  mod.rs  source.rs  workspace.rs
parser/tests/: free_fn_tests.rs  impl_fn_tests.rs  impl_trait_tests.rs  nested_fn_tests.rs  result_fn_tests.rs  source_tests.rs  stmt_tests.rs  workspace_tests.rs
parser/tests/common/: free_fn.rs  impl_fn.rs  impl_trait.rs  mod.rs  nested_fn.rs  result_fn.rs  stmt.rs
parser/tests/example-without-workspace/: Cargo.toml
parser/tests/example-workspace/: Cargo.toml  firedbg.toml
parser/tests/example-workspace/main-one/: Cargo.toml
parser/tests/example-workspace/main-one/src/: lib.rs  main.rs
parser/tests/example-workspace/main-one/tests/: simple_tests.rs
parser/tests/example-workspace/main-two/: Cargo.toml
parser/tests/example-workspace/main-two/src/: renamed-main.rs
parser/tests/example-workspace/quick-sort/: Cargo.toml
parser/tests/example-workspace/quick-sort/src/: conquer.rs  divide.rs  lib.rs  main.rs
protocol/: Cargo.toml  README.md
protocol/src/: allocation.rs  breakpoint.rs  event.rs  info.rs  lib.rs  source.rs  util.rs  value.rs
